# rs-async-zip-futures

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci-clippy.yml  ci-fmt.yml  ci-linux.yml  ci-typos.yml  ci-wasm.yml
examples/: cli_compress.rs
src/: lib.rs
src/entry/: builder.rs  mod.rs
src/read/: mod.rs
src/spec/: compression.rs  consts.rs  extra_field.rs  header.rs  parse.rs  version.rs
src/tests/: mod.rs
src/tests/write/: mod.rs
src/tests/write/offset/: mod.rs
src/tests/write/zip64/: mod.rs
src/write/: compressed_writer.rs  entry_stream.rs  entry_whole.rs  mod.rs
src/write/io/: offset.rs
tests/: compress_test.rs
tests/common/: mod.rs
