[package]
name = "async_zip_futures"
version = "0.0.12"
edition = "2021"
authors = ["Harry [hello@majored.pw]", "Luka Zakrajšek <luka@bancek.net>"]
repository = "https://github.com/bancek/rs-async-zip-futures"
description = "An asynchronous ZIP archive reading/writing crate using futures-rs."
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/async_zip_futures/"
homepage = "https://github.com/bancek/rs-async-zip-futures"
keywords = ["async", "zip", "archive", "futures", "futures-rs"]
categories = ["asynchronous", "compression"]

[features]
full = ["chrono"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
crc32fast = "1"
log = "0.4.17"
thiserror = "1"
pin-project = "1"
chrono = { version = "0.4.23", default-features = false, features = [
  "clock",
], optional = true }
futures = "0.3"

[dev-dependencies]
# tests
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["full"] }
env_logger = "0.11.0"
zip = "0.6.3"

# examples
anyhow = "1"
