[package]
name = "async_zip_futures"
version = "0.0.13"
edition = "2021"
authors = ["Harry [hello@majored.pw]", "Luka Zakrajšek <luka@bancek.net>"]
repository = "https://github.com/bancek/rs-async-zip-futures"
description = "An asynchronous ZIP archive reading/writing crate using futures-rs."
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/async_zip_futures/"
homepage = "https://github.com/bancek/rs-async-zip-futures"
keywords = ["async", "zip", "archive", "futures", "futures-rs"]
categories = ["asynchronous", "compression"]

[features]
full = ["chrono"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
crc32fast = "1.5.0"
log = "0.4.29"
thiserror = "2.0.17"
pin-project = "1.1.10"
chrono = { version = "0.4.42", default-features = false, features = [
  "clock",
], optional = true }
futures = "0.3.31"

[dev-dependencies]
# tests
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["full"] }
env_logger = "0.11.8"
zip = "7.0.0"

# examples
anyhow = "1.0.100"
